[tool.poetry]
name = "user_service"
version = "1.0.0"
description = "User service example"
authors = [
    "SamWarden <SamWardenSad@gmail.com>",
]
maintainers = [
    "SamWarden <SamWardenSad@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SamWarden/user_service"
repository = "https://github.com/SamWarden/user_service"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
structlog = "^24.1.0"
fastapi = "^0.110.2"
orjson = "^3.10.1"
alembic = "^1.13.1"
rich = "^13.7.1"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
didiator = {version = "^0.3.1", extras = ["di"]}
uuid6 = "^2024.1.12"
aio-pika = "^9.4.1"
uvloop = "^0.19.0"
adaptix = "^3.0.0b5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
testcontainers = {version = "^4.4a.0", extras = ["postgresql"]}
pytest-order = "^1.2.1"
pytest-xdist = "^3.6.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^3.1.0"
mypy = "^1.10.0"
ruff = "^0.4.2"

[tool.black]
line-length = 120
target-version = ["py311"]
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
