[project]
name = "user_service"
version = "2.0.0"
description = "The user service app"
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
    "adaptix>=3.0.0b10",
    "aio-pika>=9.5.5",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "didiator[di]==0.3.1",
    "fastapi>=0.115.12",
    "orjson>=3.10.16",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "structlog>=25.2.0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = ["pre-commit==4.1.*"]
test = [
    "pytest==8.3.*",
    "pytest-asyncio>=0.26.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.6.1",
    "testcontainers>=4.10.0",
]
lint = [
    "mypy==1.15.*",
    "ruff==0.9.*",
    "pylint==3.3.*",
]

[project.urls]
Homepage = "https://github.com/SamWarden/user_service"
Repository = "https://github.com/SamWarden/user_service"
Issues = "https://github.com/SamWarden/user_service/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"
